examples/test/testpolicy13842.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13842
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key12: value46
      key30: value0
      key2: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key25: value11
      podSelector:
        matchLabels:
          key36: value13
          key26: value7
          key33: value14
